--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,6 +31,11 @@ jobs:
       run: mvn -B package --file pom.xml
       working-directory: ./navi  # <--- adjust this
 
+    - name: Generate Dependency Graph
+      run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
+      working-directory: ./navi
+
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
