--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,30 +14,34 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+  id-token: write
+  dependencies: write  # This is required for dependency submission to work
+
 jobs:
   compile:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
 
-      - name: Build with Maven
-        run: mvn -B package
-        working-directory: ./navi
+    - name: Build with Maven
+      run: mvn -B package
+      working-directory: ./navi
 
-      - name: Generate Dependency Graph
-        run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
-        working-directory: ./navi
+    - name: Generate Dependency Graph
+      run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
+      working-directory: ./navi
 
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@v4
-        with:
-          directory: ./navi
-
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@v3
+      with:
+        directory: ./navi
