--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,8 +16,7 @@ on:
 
 permissions:
   contents: read
-  id-token: write
-  dependencies: write  # This is required for dependency submission to work
+  id-token: write  # Only valid keys here
 
 jobs:
   compile:
@@ -40,6 +39,12 @@ jobs:
     - name: Generate Dependency Graph
       run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
       working-directory: ./navi
+
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@v3
+      with:
+        directory: ./navi
+
 
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v3
